// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders the Button correctly with no props  1`] = `
<button
  className=""
  onClick={null}
>
  Press Me
</button>
`;

exports[`Renders the Button correctly with test props 1`] = `
<button
  className="sampleClass"
  onClick={null}
>
  Sample Title
</button>
`;
